# accessibility

./: .gitignore  README.md  analyze_axe.py  analyze_axe_detailed.py  main.py  pyproject.toml  requirements.txt  urls.txt
config/: constants.py
core/: analyzer.py  angular_handler.py  dynamic_handler.py  html_generator.py  image_processing.py  ports.py  react_handler.py  report.py  screenshot_handler.py  webdriver_setup.py
media_cache/: cache.json
results/fundaciondelcorazon_com/2025-06-14_11-51-59/: accessible_page.html  comparison_report.html  final_report.json  initial_report.json  original_page.html
results/fundaciondelcorazon_com/2025-06-15_13-25-54/: accessible_page.html  final_report.json  initial_report.json  original_page.html
results/fundaciondelcorazon_com/2025-06-15_13-36-24/: accessible_page.html  final_report.json  initial_report.json  original_page.html
results/fundaciondelcorazon_com/2025-06-15_13-39-25/: accessible_page.html  final_report.json  initial_report.json  original_page.html
results/fundaciondelcorazon_com/2025-06-15_13-41-57/: accessible_page.html  comparison_report.html  final_report.json  initial_report.json  original_page.html
results/hospitalclinico_salud_aragon_es/2025-06-14_11-07-46/: accessible_page.html  comparison_report.html  final_report.json  initial_report.json  original_page.html
results/hospitalpuertadelmar_com/2025-06-14_11-40-24/: accessible_page.html  comparison_report.html  final_report.json  initial_report.json  original_page.html
utils/: html_utils.py  io_utils.py  violation_utils.py
(+5 files in other folders)
